<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp"
    android:background="@color/purple_back">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:src="@drawable/becover"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@+id/songDurationn"
        android:layout_toEndOf="@+id/imageMV"
        android:fontFamily="@font/mukta_semibold"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songAlbum"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/songDurationn"
        android:layout_toEndOf="@+id/imageMV"
        android:fontFamily="@font/mukta_light"
        android:text="@string/song_album"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songDurationn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginHorizontal="5dp"/>

</RelativeLayout>